@@ -3,6 +3,7 @@ hw-detect (1.60) UNRELEASED; urgency=low
   [ Guido Guenther ]
   * add optional multipath detection to disk-detect.sh (triggered by
     disk-detect/multipath/enable), closes: #440439.
+  * hw-detect.sh: make multipath detection less obfuscated
 
  -- Otavio Salvador <otavio@debian.org>  Tue, 26 Feb 2008 10:17:27 -0300
 
